--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 WinEditLine's (formerly MinGWEditLine) ChangeLog
 ------------------------------------------------
 
+*** November 17, 2016: release of WinEditLine 2.201 ***
+
+  Changes with respect to the previous version include:
+  - all CR, LF characters are now stripped when redirecting input
+    from a file or pipe (thanks to Paolo Vergano for reporting this)
+  - empty lines in redirected input do not cause readline() to
+    return NULL, but "" as it should
+
 *** November 13, 2016: release of WinEditLine 2.2 ***
 
   Changes with respect to the previous version include:
